# rustlibrary

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/enel/platform/rustlibrary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/enel/platform/rustlibrary/: MainActivity.kt
app/src/main/java/com/enel/platform/rustlibrary/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/enel/platform/rustlibrary/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: build.gradle
rust/src/androidTest/java/com/enel/platform/rustlibrary/rust/: ExampleInstrumentedTest.kt
rust/src/main/: AndroidManifest.xml
rust/src/main/java/com/enel/platform/rustlibrary/rust/: Hello.kt
rust/src/test/java/com/enel/platform/rustlibrary/rust/: ExampleUnitTest.kt
rusthello/: .gitignore  Cargo.toml
rusthello/.cargo/: config.toml
rusthello/src/: lib.rs
